bugfix - missing hrefs for hand icons

--- a/django_web_server/static/fragments/property.html
+++ b/django_web_server/static/fragments/property.html
@@ -33,7 +33,7 @@
 		    			</span>
 		    			<br/>
 		    			<a
-		    				style='color:white !important;'
+		    				style='color:white !important;' href=''
 		    				ng-click='selectPreviousPropertyInCategory();' class='bold'>
 		    				&laquo;
 		    			</a>
@@ -45,7 +45,7 @@
 		    				properties	
 		    			</span>
 		    			<a 
-			    			style='color:white !important;'
+			    			style='color:white !important;' href=''
 			    			ng-click='selectNextPropertyInCategory();' class='bold'>
 		    				&raquo;
 		    			</a>
