--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -20,28 +20,23 @@
 
 						<!-- BEGIN REVERSE ORDER ////////////////////////////////////// -->
 
-						<span style='float:right'>
+						<span style='float:right;margin-left:10px;'>
 							<a href='' ng-click="openLinkedIn();">
-						  		<img ng-src="/static/image/icon-linkedin.png"/>
+						  		<img ng-src="/static/image/linkedin_transparent_24.png"/>
+							</a>
+						</span>
+
+						<span style='float:right;margin-left:10px'>
+							<a href='' ng-click="openFacebook();">
+						  		<img ng-src="/static/image/facebook_transparent_24.png"/>
 							</a>
 						</span>
 
 						<span style='float:right'>
 							<a href='' ng-click="openTwitter();">
-						  		<img
-						  			style='margin-right:10px'
-									ng-src="/static/image/icon-twitter.png"
-									/>
+						  		<img ng-src="/static/image/twitter_transparent_24.png"/>
 							</a>
-						</span>
-
-						<span style='float:right;margin-right:10px'>
-							<a href='' ng-click="openFacebook();">
-						  		<img ng-src="/static/image/icon-fb.png"/>
-							</a>
-						</span>
-
-					  	<!-- END REVERSE ORDER //////////////////////////////////////// -->
+						</span>						
 					</div>
 
 					<div class='justify grey-text bold' style='margin-top:5px;'>
