--- a/django_web_server/static/fragments/contactbar.html
+++ b/django_web_server/static/fragments/contactbar.html
@@ -1,87 +1,34 @@
 <div id='ContactBar'>
-	<div style="width:100%;">
-		<div class='contact unselectable contact-bar-background bold' 
-			style='width:100%;color:#a3a3a3'>
+	<div style="width:100%;display:table;">
+		<div class='unselectable contact-bar-background bold' 
+			style='height:40px;width:100%;color:#a3a3a3;vertical-align:middle;display:table-cell;'>
 
-			<span style='width:100px;'></span>
+			<div style='float:left;margin-left:100px;'>
+		  		<a href='' style='margin-right:10px' ng-click='openTwitter();'>
+			  		<img ng-src="/static/image/twitter_transparent_24.png"/>
+				</a>	
 
-			<!-- ICONS -->
-			<span style='float:left;margin-right:10px;'>
-				<a href='' style='margin-top:5px;margin-bottom:5px;' ng-click="openFacebook();">
-			  		<img
-			  			class=''		  								
-						ng-src="/static/image/icon-fb.png"
-						/>
+				<a href='' ng-click="openFacebook();" style='margin-right:10px'>
+			  		<img ng-src="/static/image/facebook_transparent_24.png"/>
+				</a>		
+
+				<a href='' ng-click="openLinkedIn();" >
+			  		<img ng-src="/static/image/linkedin_transparent_24.png"/>
 				</a>
-			</span>
+			</div>
 
-			<span style='float:left'>
-		  		<a href='' ng-click='openTwitter();'>
-			  		<img
-			  			class=''
-			  			style='margin-top:5px;margin-bottom:5px;margin-right:10px'
-						ng-src="/static/image/icon-twitter.png"						
-						/>
-				</a>
-			</span>
-			
-			<span style='float:left'>
-				<a href='' ng-click="openLinkedIn();">
-			  		<img
-			  			class=''
-			  			style='margin-top:5px;margin-bottom:5px;'
-						ng-src="/static/image/icon-linkedin.png"					
-						/>
-				</a>
-			</span>
-
-			<!-- BEGIN REVERSE ORDER ////////////////////////////////////// -->
-
-		  	<span style='float:right;margin-right:100px;'>
-		  		<a href='' 
+			<div style='float:right;margin-right:100px;'>
+				<span>email</span>
+				<a href='' 
 		  			style='color:#a3a3a3;'
 		  			ng-click='emailPrimaryContact();'>{{ model.getPrimaryContact().email }}</a>
-		  	</span>
+				&middot;
+				<span>phone</span>
+				<span>{{ model.getPrimaryContact().phone }}</span>
+			</div>
 
-		  	<span style='float:right' class='bold'>
-		  		Email:&nbsp;
-		  	</span>
-
-		  	<span style='float:right'>
-		  		&nbsp;
-		  	</span>
-
-			<span style='float:right'>
-		  		<img
-		  			style='margin-top:5px;margin-bottom:5px;'
-					ng-src="/static/image/icon-mail.png"
-					/>
-			</span>
-
-		  	<span style='float:right'>
-		  		&nbsp;&nbsp;&nbsp;
-		  	</span>
-
-			<span style='float:right'>
-		  		{{ model.getPrimaryContact().phone }}
-		  	</span>
-
-		  	<span style='float:right' class='bold'>
-		  		Phone:&nbsp;
-		  	</span>
-
-		  	<span style='float:right'>
-		  		&nbsp;
-		  	</span>
-
-			<span style='float:right'>
-		  		<img
-		  			style='margin-top:5px;margin-bottom:5px;'
-					ng-src="/static/image/icon-phone.png"
-					/>
-			</span>
-
-		  	<!-- END REVERSE ORDER //////////////////////////////////////// -->
+			<div style='clear:both;'>
+			</div>
 		</div>
 	</div>
 </div>
