--- a/django_web_server/static/fragments/contactbar.html
+++ b/django_web_server/static/fragments/contactbar.html
@@ -18,12 +18,12 @@
 			</div>
 
 			<div style='float:right;margin-right:100px;'>
-				<span>email</span>
+				<span>Email:</span>
 				<a href='' 
 		  			style='color:#a3a3a3;'
 		  			ng-click='emailPrimaryContact();'>{{ model.getPrimaryContact().email }}</a>
 				&middot;
-				<span>phone</span>
+				<span>Phone:</span>
 				<span>{{ model.getPrimaryContact().phone }}</span>
 			</div>
 
