copy for existing pages - excludes about us section

--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -44,7 +44,7 @@
     		</span>
     		<hr style='width:50%;height:2px;color:#a1be14;background-color:#a1be14;border:none;'/>
     		<span style='font-size:1.5em;font-weight:bold;'>
-    			unmissable development opportunities across a diverse range of sectors
+    			Please make yourself at home
     		</span>
     	</div>
 	</div>
@@ -58,7 +58,7 @@
 		</div>
 		<div class='justify'
 			style='width:70%;margin-left:100px;margin-bottom:25px;margin-top:25px;'>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			In today’s highly competitive property development market, it takes something truly unique to stand out from the crowd. Too often, property developers interpret the term “development” as a noun, whilst forgetting that as a verb, it means a state of growth and advancement. This is where Fisher Roeland comes in.
 		</div>
 
 		<div style='margin-left:100px;width:80%;' class='unselectable'>
@@ -91,30 +91,47 @@
 
 				<div style='margin-top:15px;'>
 					<div style='font-size:2em;'>
-						How We Can Help You
+						Our Portfolio
 					</div>
 					<div class='justify' style='margin-top:15px;'>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<p>
+						As of September 2015, Fisher Roeland Properties has just sealed a lucrative deal for 20 prime properties in the biggest land sale transaction in Linbro Park, cementing Fisher Roeland as the area experts.</p>
+						<p>The secret behind Fisher Roeland Properties’ successful acquisition of this groundbreaking deal can be attributed to their excellent networking skills and impeccable strategic planning, which allowed them to package the properties to be irresistible to serious developers.</p>
+						<p>Furthermore, an impressive 45 additional properties, with a book value of over R1 Billion, are currently in the process of signing up for the company’s personal approach to property development.</p>
+						<p>The hospitality industry lies very close to the heart of Fisher Roeland Properties' passion for people and property development. With over 15 hotels already on its books, Fisher Roeland Properties is on the fast track to becoming the name to trust and industry expert in hotel and leisure property.</p>
 					</div>
 				</div>
-			</div>
-
-			<div class='column column2' style='margin-right:20px;'>
-<!-- 				<img style='display:block;' ng-src="/static/image/icon-people.png"/> -->
-
-				<div style='height:69px;'></div>
 
 				<div style='margin-top:15px;'>
 					<div style='font-size:2em;'>
-						&nbsp;
+						Our Approach
 					</div>
 					<div class='justify' style='margin-top:15px;'>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<p>
+						Fisher Roeland Properties is committed to so more than creating value for the property development industry. The extra mile is never too far.</p>
+						<p>The company works closely with Town Planners to establish the envisioned outcome based on the Urban Development Framework for the relevant area. Our unique ability to package large tracts of land to appeal to major developers allows us to then match prospective buyers with the property that best suits their needs, budget and brand personality.</p>
+					</div>
+				</div>
+
+				<div style='margin-top:15px;'>
+					<div style='font-size:2em;'>
+						Our Future
+					</div>
+					<div class='justify' style='margin-top:15px;'>
+						<p>
+						Thanks to a proactive approach to packaging and promoting prime property, Fisher Roeland Properties is expanding exponentially, with an exciting expansion into other Southern African countries already in the pipeline.</p>
+						<p>Aside from the existing offices in Sandton and Cape Town, the first international Fisher Roeland Properties office will also be established in Europe in 2016, in order to facilitate up close and personal collaborations with foreign investors and developers who are interested in expanding their business into the African market.</p>
+						<p>Keep watching this space for more.</p>
 					</div>
 				</div>
 			</div>
 
-			<div class='column column3' style='margin-right:20px;'>
+<!-- 			<div class='column column2' style='margin-right:20px;'>
+				<img style='display:block;' ng-src="/static/image/icon-people.png"/>
+				<div style='height:69px;'></div>				
+			</div> -->
+
+			<div class='column column2' style='margin-right:20px;'>
 				<img style='display:block;margin:auto;' ng-src="/static/image/icon-marker.png"/>
 			
 				<div style='text-align:center;'>
