--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -40,7 +40,15 @@
 					</div>
 
 					<div class='justify grey-text bold' style='margin-top:5px;'>
-					   	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<div class='white'>Mision Statement</div>
+					   	<div>
+					   	To provide a uniquely personal approach to property development  and hospitality for the industries and consumers alike, by growing and advancing the property redevelopment market, the hospitality and leisure industry, individual lives and surrounding communities.
+					   	</div>
+					   	<br/>
+					   	<div class='white'>Vision Statement</div>
+					   	<div>
+					   	To become the preferred partner in the Southern African property development and hospitality market through our passion for people, property and our commitment to service excellence.
+					   	</div>
 					</div>
 
 		   		</div>
