tailbar - blurb justification - left

--- a/django_web_server/static/fragments/tailbar.html
+++ b/django_web_server/static/fragments/tailbar.html
@@ -39,7 +39,7 @@
 						</span>						
 					</div>
 
-					<div class='justify grey-text bold' style='margin-top:5px;'>
+					<div class='grey-text bold' style='margin-top:5px;'>
 						<div class='white'>Mision Statement</div>
 					   	<div>
 					   	To provide a uniquely personal approach to property development  and hospitality for the industries and consumers alike, by growing and advancing the property redevelopment market, the hospitality and leisure industry, individual lives and surrounding communities.
