about us page - in progress

--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -3,6 +3,7 @@
 	ng-show='view == Views.ABOUT'
 	style='width:100%;'
 	>
+
 	<div style='width:100%; position: relative;'>
 
 		<!-- section background image -->
@@ -40,44 +41,52 @@
     	</div>
 	</div>
 
-	<div style='
-		width:100%;
-		position:relative;
-		'
-		>
-		<div 
-			class='light-grey-background drop-shadow'
-			style='
-			margin-top:50px;margin-bottom:50px;
-			margin-left:100px;margin-right:100px;
-			'>			
-			<div style='
-				position:relative;float:left;
-				width:20%;
-				height:200px;
-				background-color:green;'>
-				&nbsp;
+	<div style='clear:both;'></div>
+
+	<br/>
+
+	<div style='margin-left:100px;margin-right:100px;' class='drop-shadow'>
+		<div style='display:table;width:100%;'>
+			<div style='display:table-cell;width:200px;height:200px;' 
+				class='vomit-green-background'>
 			</div>
-			<div style='
-				position:relative;float:left;
-				width:80%;
-				'
-				>
-				<div style='margin-left:25px;margin-top:25px;'>
-					<div style='font-size:2.5em;'>
-						<span class='vomit-green'>Why we</span>
-						<span class='grey-text'>started ?</span>
-					</div>
-					<br/>
-					<div style='margin-right:25px;'>
-						Fisher Roeland Properties was founded in 2013 as a joint venture between Jennifer Rose and Lisa  Roeland after identifying a need in the market to fuse a passion for property development with a passion for people.
-					</div>
-					<br/>
+			<div 
+				class='light-grey-background'
+				style='display:table-cell;vertical-align:middle;padding-left:50px;padding-right:25px;'>
+				<div style='font-size:2.5em;'>
+					<span class='vomit-green'>Why we</span>
+					<span class='grey-text'>started ?</span>
 				</div>
-			<div>
+				<br/>
+				<div>
+					Fisher Roeland Properties was founded in 2013 as a joint venture between Jennifer Rose and Lisa  Roeland after identifying a need in the market to fuse a passion for property development with a passion for people.
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<div style='clear:both;'>
+	<br/>
+
+	<div style='margin-left:100px;margin-right:100px;'>
+		<div style='display:table;width:100%;' 
+			class=''
+			>
+			<div style='display:table-cell;width:60%;'>
+				<div style='font-size:2.5em;'>
+					<span class='vomit-green'>Base of</span>
+					<span class='grey-text'>operations</span>
+				</div>
+				<br/>
+				<div style='margin-right:100px;'>
+					Based in Linbro Park, Sandton and operating throughout most of South Africa’s major cities, Fisher Roeland Properties’ innovative approach and dedication to service excellence almost instantly established the company as experts and the preferred partner for developments in highly sought-after locations.
+				</div>
+			</div>
+			<div style='display:table-cell;width:40%;'>
+				&nbsp;
+			</div>
+		</div>
 	</div>
+
+	<br/>
+
 </div>
