--- a/django_web_server/static/css/base.css
+++ b/django_web_server/static/css/base.css
@@ -168,6 +168,10 @@ Very light Grey:
 	color: #a1be14 !important;
 }
 
+.vomit-green-background {
+	background-color: #a1be14 !important;
+}
+
 /* #f5f5f5 */
 .light-grey-background {
 	background-color: #f0f0f0 !important;
