--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -71,18 +71,34 @@
 		<div style='display:table;width:100%;' 
 			class=''
 			>
-			<div style='display:table-cell;width:60%;'>
+			<div style='display:table-cell;width:700px;'>
 				<div style='font-size:2.5em;'>
 					<span class='vomit-green'>Base of</span>
 					<span class='grey-text'>operations</span>
 				</div>
 				<br/>
-				<div style='margin-right:100px;'>
+				<div style='width:600px;'>
 					Based in Linbro Park, Sandton and operating throughout most of South Africa’s major cities, Fisher Roeland Properties’ innovative approach and dedication to service excellence almost instantly established the company as experts and the preferred partner for developments in highly sought-after locations.
 				</div>
+				<br/>
+				<div style=''>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229331.7660632669!2d28.133431314144847!3d-26.088835165626904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956d4a75e3050d%3A0x5b2ef8fc2c61693c!2s32+Beacon+Ave%2C+Sandton%2C+2090!5e0!3m2!1sen!2sza!4v1443093168856" width="650" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
 			</div>
-			<div style='display:table-cell;width:40%;'>
-				&nbsp;
+			<div style='
+				display:table-cell;
+				width:auto;
+				height:200px;
+				text-align:center;
+				'>
+
+				<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+
+				<span>Fisher Roeland Properties is your</span>
+				<br/>
+				<span class='text200'>premier partner</span>
+				<br/>
+				<span>in property development</span>
 			</div>
 		</div>
 	</div>
