--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -105,4 +105,58 @@
 
 	<br/>
 
+	<div class='light-grey-background'>
+		<br/>
+		
+		<div style='margin-left:100px;'>
+			<div style='font-size:2.5em;'>
+				<span class='vomit-green'>Our</span>
+				<span class='grey-text'>team</span>
+			</div>
+		</div>
+
+		<br/>
+
+		<div style='margin-left:100px;margin-right:100px;'>
+			<div style='width:100%;display:table;'>
+				<div style='width:100%;height:100%;
+					
+					display:table-cell;
+					vertical-align:middle;
+
+					'>
+					<div style='width:70%;position:relative;float:right;
+						background-color:white;padding:50px;
+						'
+						class='drop-shadow'
+						>
+						<div class='text200 vomit-green'>
+							Lisa Fisher Roeland
+						</div>
+						<div class='text150'>
+							BComm LLB (WITS)
+						</div>
+						<br/>
+						<div>
+							<span>A formidable force in the legal field, astute businesswoman and passionate pioneer by nature, Lisa brings a wealth of invaluable expertise on innumerable levels to the table. She has carved a niche for herself as a litigation and commercial attorney, conveyancer, member of the Law Society and the Estate Agents Affairs Board, with concurrent Fidelity Fund Certification.</span>
+							<br/>
+							<br/>
+							<span>A progeny of Michael Snoyman, Lisa successfully took over his massive practice at a very young age after his untimely death. When it got sold in 2002, the Fisher Roeland legal practice was born - a bespoke firm that specialises in swift and personal service that goes the extra mile.</span>
+							<br/>
+							<br/>
+							<span>Lisa Roeland has been the cornerstone of a practice that efficiently takes care of personal and commercial legal matters for more than a decade. The firm’s property transaction division has become a leader in its field, especially in the Sandton CBD area, facilitating the client journey, from falling in love with the property, advising on the legal aspects and ensuring seamless registration with the Deeds Office.</span>
+						</div>
+					</div>
+
+					<div style='position:relative;top:100px;left:100px;z-index:1;'>
+						<image src='/static/image/robot.png'/>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<br/>
+		<br/>
+
+	</div>
 </div>
