about - done & awaiting elements from Rozier

--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -156,6 +156,75 @@
 		</div>
 
 		<br/>
+
+		<div style='margin-left:100px;margin-right:100px;'>
+			<div style='width:100%;display:table;'>
+				<div style='width:100%;height:100%;
+					
+					display:table-cell;
+					vertical-align:middle;
+
+					'>
+					<div style='width:70%;position:relative;float:left;
+						background-color:white;padding:50px;
+						'
+						class='drop-shadow'
+						>
+						<div class='text200 vomit-green'>
+							Jennifer Rose
+						</div>
+						<br/>
+						<div>
+							<span>Jennifer Rose has done it all. Kilimanjaro - got the T-shirt to prove it. Skydiving, hiking, paragliding, caving, mountaineering, trekking, river rafting and abseiling - been there, done that and still loving it.</span><br/><br/>
+							<span>This adventurous spirit that has led Jennifer to embark on a life path that is defined by passion, compassion and a pure and simple vision for a better future.</span><br/><br/>
+							<span>Jennifer has worked in a myriad of fields, from advertising and sales &amp; marketing, to extreme sports and tailor-made leisure breakaways, continually establishing businesses that break the mould time and time again.</span><br/><br/>
+							<span>Her passion, however, has always been people, leading her to pioneer the Africa Alzheimer’s Congress, brought the 2nd World Congress On Healthy Ageing to South Africa in July 2015 and is active in many other philanthropic endeavours.</span><br/><br/>
+							<span>Jennifer’s adventures in life and business have equipped her with an invaluable ability to network  and connect people in meaningful ways, establishing her as a leader and innovator in the hospitality and leisure fields. Watch this space for the next adventure.</span><br/><br/>
+							<span>Lisa and Jennifer’s friendship has been unbreakable since meeting by chance at the turn of the millennium, whilst swimming with the dolphins off the coast of Mozambique. It is this friendship that has subsequently and perhaps, unknowingly, become the foundation and driving force behind the personable, friendly and passionate nature of Fisher Roeland Properties.</span>
+						</div>
+					</div>
+
+					<div style='position:relative;top:100px;left:-100px;z-index:1;'>
+						<image src='/static/image/robot.png'/>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<br/>
+
+		<div style='margin-left:100px;margin-right:100px;'>
+			<div style='width:100%;display:table;'>
+				<div style='width:100%;height:100%;
+					
+					display:table-cell;
+					vertical-align:middle;
+
+					'>
+					<div style='width:70%;position:relative;float:right;
+						background-color:white;padding:50px;
+						'
+						class='drop-shadow'
+						>
+						<div class='text200 vomit-green'>
+							Ernst Kulhmann
+						</div>
+						<br/>
+						<div>
+							<span>With 18 years executive consulting experience, Ernst has been involved in every industry.  Clients and brands he has worked with include Investec, McCain Foods, STD Bank, FNB, Samsung and Growthpoint.  He started his career in retail and with extensive experience in hospitality and client service environments he understands the requirements for successful hospitality and retail developments.  He has been a director in multiple firms and headed up a few very successful consulting firms as well.  He has a passion for life, a wicked sense of humour and loves meeting new people and discovering new places.</span>
+							<br/>
+							<br/>
+							<span>Ernst heads up the hospitality and retail divisions within Fisher Roeland Properties.</span>
+						</div>
+					</div>
+
+					<div style='position:relative;top:50px;left:100px;z-index:1;'>
+						<image src='/static/image/robot.png'/>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<br/>
 
 	</div>
