about us - visual elements

--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -17,7 +17,7 @@
 				width:100%;
 				display:block;'
 
-				ng-src="/static/image/header-category.jpg"/>
+				ng-src="/static/image/header-about.jpg"/>
 		</div>
 
 		<!-- text overlay -->
@@ -49,6 +49,7 @@
 		<div style='display:table;width:100%;'>
 			<div style='display:table-cell;width:200px;height:200px;' 
 				class='vomit-green-background'>
+				<img style='height:100%;width:100%;' src='/static/image/img-started.png'/>
 			</div>
 			<div 
 				class='light-grey-background'
@@ -88,17 +89,14 @@
 			<div style='
 				display:table-cell;
 				width:auto;
-				height:200px;
 				text-align:center;
 				'>
 
-				<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+				<br/>
 
-				<span>Fisher Roeland Properties is your</span>
-				<br/>
-				<span class='text200'>premier partner</span>
-				<br/>
-				<span>in property development</span>
+				<div>
+					<image style='width:209px;' src='/static/image/img-premier.png'/>
+				</image>
 			</div>
 		</div>
 	</div>
@@ -148,10 +146,10 @@
 						</div>
 					</div>
 
-					<div style='position:relative;top:100px;left:100px;z-index:1;'>
+<!-- 					<div style='position:relative;top:100px;left:100px;z-index:1;'>
 						<image src='/static/image/robot.png'/>
 					</div>
-				</div>
+ -->				</div>
 			</div>
 		</div>
 
@@ -184,10 +182,10 @@
 						</div>
 					</div>
 
-					<div style='position:relative;top:100px;left:-100px;z-index:1;'>
+<!-- 					<div style='position:relative;top:100px;left:-100px;z-index:1;'>
 						<image src='/static/image/robot.png'/>
 					</div>
-				</div>
+ -->				</div>
 			</div>
 		</div>
 
@@ -218,10 +216,10 @@
 						</div>
 					</div>
 
-					<div style='position:relative;top:50px;left:100px;z-index:1;'>
+<!-- 					<div style='position:relative;top:50px;left:100px;z-index:1;'>
 						<image src='/static/image/robot.png'/>
 					</div>
-				</div>
+ -->				</div>
 			</div>
 		</div>
 
