about us html structure bug fix

--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -4,6 +4,7 @@
 	style='width:100%;'
 	>
 
+	<!-- HEADER -->
 	<div style='width:100%; position: relative;'>
 
 		<!-- section background image -->
@@ -45,6 +46,7 @@
 
 	<br/>
 
+	<!-- WHY WE STARTED -->
 	<div style='margin-left:100px;margin-right:100px;' class='drop-shadow'>
 		<div style='display:table;width:100%;'>
 			<div style='display:table-cell;width:200px;height:200px;' 
@@ -68,10 +70,9 @@
 
 	<br/>
 
+	<!-- BASE OF OPERATIONS -->
 	<div style='margin-left:100px;margin-right:100px;'>
-		<div style='display:table;width:100%;' 
-			class=''
-			>
+		<div style='display:table;width:100%;'>
 			<div style='display:table-cell;width:700px;'>
 				<div style='font-size:2.5em;'>
 					<span class='vomit-green'>Base of</span>
@@ -86,24 +87,21 @@
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229331.7660632669!2d28.133431314144847!3d-26.088835165626904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956d4a75e3050d%3A0x5b2ef8fc2c61693c!2s32+Beacon+Ave%2C+Sandton%2C+2090!5e0!3m2!1sen!2sza!4v1443093168856" width="650" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div>
-			<div style='
-				display:table-cell;
-				width:auto;
-				text-align:center;
-				'>
+			<div style='display:table-cell;width:auto;text-align:center;'>
 
 				<br/>
 
 				<div>
 					<image style='width:209px;' src='/static/image/img-premier.png'/>
-				</image>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<br/>
 
-	<div class='light-grey-background'>
+	<!-- OUR TEAM -->
+	<div class='light-grey-background' style=''>
 		<br/>
 		
 		<div style='margin-left:100px;'>
@@ -120,9 +118,7 @@
 				<div style='width:100%;height:100%;
 					
 					display:table-cell;
-					vertical-align:middle;
-
-					'>
+					vertical-align:middle;'>
 					<div style='width:70%;position:relative;float:right;
 						background-color:white;padding:50px;
 						'
@@ -148,8 +144,8 @@
 
 <!-- 					<div style='position:relative;top:100px;left:100px;z-index:1;'>
 						<image src='/static/image/robot.png'/>
-					</div>
- -->				</div>
+					</div>  -->
+				</div>
 			</div>
 		</div>
 
