portraits - missing lisa

--- a/django_web_server/static/fragments/about.html
+++ b/django_web_server/static/fragments/about.html
@@ -178,10 +178,10 @@
 						</div>
 					</div>
 
-<!-- 					<div style='position:relative;top:100px;left:-100px;z-index:1;'>
-						<image src='/static/image/robot.png'/>
+ 					<div style='position:relative;top:50px;left:-30px;z-index:1;'>
+						<image src='/static/image/img-jenny.jpg'/>
 					</div>
- -->				</div>
+ 				</div>
 			</div>
 		</div>
 
@@ -212,10 +212,10 @@
 						</div>
 					</div>
 
-<!-- 					<div style='position:relative;top:50px;left:100px;z-index:1;'>
-						<image src='/static/image/robot.png'/>
+ 					<div style='position:relative;top:10px;left:20px;z-index:1;'>
+						<image src='/static/image/img-ernst.jpg'/>
 					</div>
- -->				</div>
+				</div>
 			</div>
 		</div>
 
