contact address changed; fixed bug on home screen - much

--- a/django_web_server/static/fragments/contact.html
+++ b/django_web_server/static/fragments/contact.html
@@ -25,7 +25,7 @@
 					Office Address
 				</span>
 				<br/>
-				32 Beacon Avenue, Linbro Park, 2065
+				157 Lipizzaner Road, Beaulieu, Midrand, 1684
 			</div>
 
 			<br/>
