--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -107,7 +107,7 @@
 					</div>
 					<div class='justify' style='margin-top:15px;'>
 						<p>
-						Fisher Roeland Properties is committed to so more than creating value for the property development industry. The extra mile is never too far.</p>
+						Fisher Roeland Properties is committed to so much more than creating value for the property development industry. The extra mile is never too far.</p>
 						<p>The company works closely with Town Planners to establish the envisioned outcome based on the Urban Development Framework for the relevant area. Our unique ability to package large tracts of land to appeal to major developers allows us to then match prospective buyers with the property that best suits their needs, budget and brand personality.</p>
 					</div>
 				</div>
