changed address on home page

--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -142,7 +142,11 @@
 							Office Address
 						</span>
 						<br/>
-						32 Beacon Avenue, Linbro Park, 2065
+						<span>157 Lipizzaner Road</span>
+						<br/> 
+						<span>Beaulieu, Midrand</span>
+						<br/>
+						<span>1684</span>
 					</div>
 
 					<br/>
