bugfix - screen overwidth - due to div closure commented out by mistake

--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -127,8 +127,8 @@
 
 <!-- 			<div class='column column2' style='margin-right:20px;'>
 				<img style='display:block;' ng-src="/static/image/icon-people.png"/>
-				<div style='height:69px;'></div>				
-			</div> -->
+				<div style='height:69px;'></div>-->				
+			</div>
 
 			<div class='column column2' style='margin-right:20px;'>
 				<img style='display:block;margin:auto;' ng-src="/static/image/icon-marker.png"/>
