handle underscore category names

--- a/django_web_server/static/fragments/category.html
+++ b/django_web_server/static/fragments/category.html
@@ -27,7 +27,7 @@
 	    			<div style='vertical-align: middle;display: table-cell;height:100%;'>
 		    			<span style='font-size:2em;'>
 			    			<span style='text-transform:capitalize;'>
-			    				{{ decodeURI(model.selectedCategory) }}
+			    				{{ deUnderscore(model.selectedCategory) }}
 		    				</span>
 		    				properties
 		    			</span>
