--- a/django_web_server/static/fragments/home.html
+++ b/django_web_server/static/fragments/home.html
@@ -125,10 +125,12 @@
 				</div>
 			</div>
 
-<!-- 			<div class='column column2' style='margin-right:20px;'>
+			<!--
+ 			<div class='column column2' style='margin-right:20px;'>
 				<img style='display:block;' ng-src="/static/image/icon-people.png"/>
-				<div style='height:69px;'></div>-->				
+				<div style='height:69px;'></div>
 			</div>
+			-->
 
 			<div class='column column2' style='margin-right:20px;'>
 				<img style='display:block;margin:auto;' ng-src="/static/image/icon-marker.png"/>
@@ -185,7 +187,6 @@
 						09:00 - 17:00
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
