fprop.com - about fragment - address changed to be consistent with previous contacts change

--- a/sites/fratt.com/static/fragments/navbar.html
+++ b/sites/fratt.com/static/fragments/navbar.html
@@ -1,7 +1,7 @@
 <div id='NavBar'>
 	<div style="width:100%;" class='light-grey-background'>
 
-		<div class='nav unselectable' style='padding-left:100px;'>
+		<div class='nav unselectable' style='padding-left:100px;float:left;'>
 			<span>
 		  		<img
 					ng-src="/static/image/logo.png"
@@ -63,5 +63,17 @@
 		  	</span>
 		</div>
 
+		<div class='nav unselectable' style='padding-right:100px;float:right;'>
+
+		  	<div>
+		  		<span>
+			  		<img
+						ng-src="/static/image/logo.png"
+						alt="Fisher Roeland Attorneys &amp; Conveyancers" />
+				</span>
+			</div>
+		</div>
+
+		<div style='clear:both;'></div>
 	</div>
 </div>
