--- a/sites/fratt.com/static/fragments/people.html
+++ b/sites/fratt.com/static/fragments/people.html
@@ -58,7 +58,7 @@
 				style='display:table-cell;vertical-align:middle;padding-left:50px;padding-right:25px;'>
 				<div style='font-size:2.5em;'>
 					<span class='vomit-green'>The</span>
-					<span class='grey-text'>Team</span>
+					<span class='grey-text'>Practice</span>
 				</div>
 				<br/>
 				<div>
