--- a/sites/frprop.com/static/fragments/about.html
+++ b/sites/frprop.com/static/fragments/about.html
@@ -84,7 +84,7 @@
 				</div>
 				<br/>
 				<div style=''>
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229331.7660632669!2d28.133431314144847!3d-26.088835165626904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e956d4a75e3050d%3A0x5b2ef8fc2c61693c!2s32+Beacon+Ave%2C+Sandton%2C+2090!5e0!3m2!1sen!2sza!4v1443093168856" width="650" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229559.25507913626!2d27.91480995983575!3d-25.9725212608217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e9570fb3eb87f87%3A0xe56102aa5fc4fa79!2s157+Lipizzaner+Rd%2C+Midrand%2C+1684!5e0!3m2!1sen!2sza!4v1464090111253" width="650" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div>
 			<div style='display:table-cell;width:auto;text-align:center;'>
