fprop.com - about fragment - address changed to be consistent with previous contacts change

--- a/sites/frprop.com/static/fragments/about.html
+++ b/sites/frprop.com/static/fragments/about.html
@@ -80,7 +80,7 @@
 				</div>
 				<br/>
 				<div style='width:600px;'>
-					Based in Lipizzaner Road, Midrand, and operating throughout most of South Africa’s major cities, Fisher Roeland Properties’ innovative approach and dedication to service excellence almost instantly established the company as experts and the preferred partner for developments in highly sought-after locations.
+					Based in Midrand and operating throughout most of South Africa’s major cities, Fisher Roeland Properties’ innovative approach and dedication to service excellence almost instantly established the company as experts and the preferred partner for developments in highly sought-after locations.
 				</div>
 				<br/>
 				<div style=''>
