wording change at Melissa's request

--- a/sites/frprop.com/static/fragments/property.html
+++ b/sites/frprop.com/static/fragments/property.html
@@ -135,7 +135,7 @@
 
 				<div style='margin-top:5px;'>
 					<a href='' ng-click="enquireAfterPriceOfSelectedProperty();">
-						<div class='green-button'>FOR SALES / PRICING CLICK HERE</div>
+						<div class='green-button'>FOR SALE / PRICING CLICK HERE</div>
 					</a>
 				</div>
 			</div>
